# rForth_OpSystem_Project

./: .gitignore  CMakeLists.txt  README.md
WeekOne/: test.c
WeekTwo/: Lecture.c
rForthProject/: CMakeLists.txt  TestToken.c  int_stack.c  int_stack.h  int_stack_demo.c  int_stacks_tests.cc  main.c  rLoop.c  rforth_loop.c  token.c  token.h
